# ipa_navigation_msgs

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.github/workflows/: main.yml
action/: ComputePathThroughPoses.action  GetFusedMap.action  GlobalActionPlanner.action  MarkerDetection.action  MonitorRepause.action  MoveBase.action  PlanDetour.action  TemplateDetection.action  TemplateDocking.action  TrackObjectPose.action  WaitForLease.action
msg/: AddControlPointsTool.msg  AgentPose.msg  AnnotatedPath.msg  AreaProperty.msg  AttachedEventTrigger.msg  BoundedPath.msg  Circle.msg  CircleFeature.msg  CompressedForces.msg  CompressedMapImage.msg  ConfigFeature.msg  ConfigLine.msg  ConfigPoint.msg  ConfigPoly.msg  ConfigPose.msg  Constraint.msg  Constraints.msg  DrawPathSegmentTool.msg  EBand2.msg  EBand2Bubble.msg  EBand2Metadata.msg  EllipticTimeCylinder.msg  EventTrigger.msg  FeatureAssociations.msg  FeatureList.msg  FeatureSourceConfig.msg  GaussianModel.msg  HmmCell.msg  HmmCellArray.msg  HmmCellMap.msg  HmmCellPoint.msg  HmmOverlayCell.msg  HmmServerBackup.msg  LTSNGScan.msg  LTSNGStatus.msg  LTSStatus.msg  LineAssociation.msg  LineFeature.msg  MergeControlPoints.msg  NavigationZone.msg  (+31 more)
msg/deprecated/: HmmCellMapDeprecated01.msg  HmmCellMapDeprecated02.msg  HmmCellMapDeprecated03.msg  HmmServerBackupDeprecated01.msg  HmmServerBackupDeprecated02.msg  HmmServerBackupDeprecated03.msg
srv/: ClearMapWindow.srv  ComputeDiffMap.srv  ConfigureFeatureSource.srv  ConfigureFeatureSourceArray.srv  ConfigureLTS.srv  CreateTemplateImage.srv  DeregisterAgent.srv  ExportMap.srv  FinishMapModification.srv  GetActiveFeatureSources.srv  GetCBSConstraints.srv  GetFusedMap.srv  GetLTSNGMap.srv  GetLTSNGMapImage.srv  GetMapDiffInit.srv  GetMapFeature.srv  GetMarkerArray.srv  GetNearestPS.srv  GetObstacleDistance.srv  GetOccupancyCells.srv  GetPathSegments.srv  GetPlans.srv  GetSafetyField.srv  GetZonesMatching.srv  InitAgent.srv  IsPoseOnPathSegment.srv  LoadDiffMap.srv  MapTransform.srv  PoseRequest.srv  ProcessConfigFeatures.srv  RequestSeenCells.srv  SetCBSConstraints.srv  SetIniPose.srv  SetIntermediateGoal.srv  SetMarkerArray.srv  SetOdomCovariance.srv  SplitPath.srv  Trace.srv
