cmake_minimum_required(VERSION 3.0.2)
project(ipa_navigation_msgs)

find_package(catkin REQUIRED COMPONENTS
  ackermann_msgs
  actionlib_msgs
  geometry_msgs
  message_generation
  nav_msgs
  sensor_msgs
  std_msgs
  uuid_msgs
  visualization_msgs
)

add_message_files(
  DIRECTORY msg
  FILES
    AddControlPointsTool.msg
    AgentPose.msg
    AnnotatedPath.msg
    AttachedEventTrigger.msg
    AreaProperty.msg
    BoundedPath.msg
    CircleFeature.msg
    CompressedMapImage.msg
    ConfigFeature.msg
    ConfigLine.msg
    ConfigPoint.msg
    ConfigPoly.msg
    ConfigPose.msg
    Constraint.msg
    Constraints.msg
    DrawPathSegmentTool.msg
    EBand2.msg
    EBand2Bubble.msg
    EBand2Metadata.msg
    EllipticTimeCylinder.msg
    EventTrigger.msg
    FeatureAssociations.msg
    FeatureList.msg
    FeatureSourceConfig.msg
    GaussianModel.msg
    HmmCell.msg
    HmmCellArray.msg
    HmmCellMap.msg
    HmmCellPoint.msg
    HmmOverlayCell.msg
    HmmServerBackup.msg
    LineAssociation.msg
    LineFeature.msg
    LTSStatus.msg
    LTSNGScan.msg
    LTSNGStatus.msg
    MergeControlPoints.msg
    NavigationZone.msg
    NavigationZoneList.msg
    ObstacleMovementPrediction.msg
    OccupancyGridCell.msg
    OccupancyGridCellList.msg
    PathSegment.msg
    PathSegmentList.msg
    PathSegmentPanel.msg
    PathSegmentPrediction.msg
    PathSegmentPredictionList.msg
    Point2D.msg
    PointAssociation.msg
    PointFeature.msg
    PolygonList.msg
    PoseAssociation.msg
    PoseFeature.msg
    RecoveryFeedback.msg
    RemoveControlPointsTool.msg
    SafetyField.msg
    SideProperty.msg
    StateEKF.msg
    StateTrajectory.msg
    StateTrajectoryPoint.msg
    TimedNodePathSegment.msg
    TimedPathSegmentPrediction.msg
    TimedPathSegmentPredictionList.msg
    TrajGenInfo.msg
    Twist2D.msg
    UbiSenseTag.msg
    UbiSenseTagList.msg
    PointWithCovarianceStamped.msg
    PointWithCovariance.msg
)

add_message_files(
  DIRECTORY msg/deprecated
  FILES
    HmmCellMapDeprecated01.msg
    HmmCellMapDeprecated02.msg
    HmmCellMapDeprecated03.msg
    HmmServerBackupDeprecated01.msg
    HmmServerBackupDeprecated02.msg
    HmmServerBackupDeprecated03.msg
)

add_service_files(
  DIRECTORY srv
  FILES
    ClearMapWindow.srv
    ConfigureFeatureSource.srv
    ConfigureFeatureSourceArray.srv
    DeregisterAgent.srv
    GetActiveFeatureSources.srv
    GetCBSConstraints.srv
    GetMapDiffInit.srv
    GetMapFeature.srv
    GetMarkerArray.srv
    GetLTSNGMap.srv
    GetLTSNGMapImage.srv
    GetNearestPS.srv
    GetObstacleDistance.srv
    GetOccupancyCells.srv
    GetPathSegments.srv
    GetPlans.srv
    GetSafetyField.srv
    GetZonesMatching.srv
    InitAgent.srv
    FinishMapModification.srv
    IsPoseOnPathSegment.srv
    MakeLandmarkShot.srv
    PoseRequest.srv
    ProcessConfigFeatures.srv
    RequestSeenCells.srv
    SetCBSConstraints.srv
    SetIniPose.srv
    SetIntermediateGoal.srv
    SetMarkerArray.srv
    SetOdomCovariance.srv
    SplitPath.srv
)

add_action_files(
  DIRECTORY action
  FILES
    GlobalActionPlanner.action
    MoveBase.action
)

generate_messages(DEPENDENCIES
  ackermann_msgs
  actionlib_msgs
  geometry_msgs
  nav_msgs
  sensor_msgs 
  std_msgs
  uuid_msgs
  visualization_msgs
)

catkin_package(
  CATKIN_DEPENDS
    ackermann_msgs
    actionlib_msgs
    geometry_msgs
    message_runtime
    nav_msgs
    sensor_msgs 
    std_msgs
    uuid_msgs
    visualization_msgs
)
