<?xml version="1.0"?>
<package format="2">
  <name>ipa_navigation_msgs</name>
  <version>3.0.2</version>
  <description>The ipa_navigation_msgs package holds specific message types for the IPA Navigation</description>

  <maintainer email="srd@ipa.fraunhofer.de">Stefan Dörr</maintainer>

  <license>BSD</license>

  <author email="srd@ipa.fraunhofer.de">Stefan Dörr</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>ackermann_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>uuid_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
